--- a/static/src/sources.tpl.html
+++ b/static/src/sources.tpl.html
@@ -10,22 +10,12 @@
 
         <div class="header">
             <p>
-                Unpaywall tracks over 50,000 different sources for Open Access content, including
-                Gold OA journals, Hybrid journals, institutional repositories, and disciplinary repositories.
-                You can search below to see if we index a particular source, or
-                <a href="http://api.oadoi.org/data/sources.csv">download the list</a> as a spreadsheet.
-
-                <!--
-                <a href="https://en.wikipedia.org/wiki/Open_access_journal">Gold OA journals,</a>
-                <a href="https://en.wikipedia.org/wiki/Hybrid_open_access_journal">Hybrid OA journals,</a>
-                <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories,</a> and
-                <a href="https://en.wikipedia.org/wiki/Disciplinary_repository">disciplinary repositories.</a>
-                -->
+                Unpaywall finds OA content in many ways, including using data from open indexes like Crossref and DOAJ where it exists. However, the majority of our OA content comes from independently monitoring over 50,000 unique online content hosting locations, including Gold OA journals, Hybrid journals, institutional repositories, and disciplinary repositories. You can search through our sources below, or
+                <a href="http://api.oadoi.org/data/sources.csv">download the complete sources list.</a>
             </p>
 
             <p>
-                If your repository or journal isn't yet on this list, we'd love to add it! You can submit
-                your repository for indexing via
+                If you'd like to add your repository or journal to our list of sources, that's great! You can submit your repository for indexing via
                 <a href="https://docs.google.com/forms/d/15o4RpUUfCUyauTt2DniLG23CWfDZ243Q1H7u6NX5zL8">
                     this form,
                 </a> and submit your journal <a href="mailto:team@impactstory.org">via email.</a>
