new footer and header links.

--- a/static/src/footer.tpl.html
+++ b/static/src/footer.tpl.html
@@ -1,37 +1,60 @@
 <div class="footer">
     <div class="content" layout="row" layout-xs="column">
 
-        <div class="links" flex="40" flex-xs="100">
-            <a href="mailto:team@impactstory.org">
-                <i class="fa fa-envelope-o"></i>
-            </a>
-            <a href="http://twitter.com/unpaywall">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a href="https://github.com/Impactstory/unpaywall">
-                <i class="fa fa-github"></i>
-            </a>
+
+
+        <div class="menu" flex="25" flex-xs="100">
+            <ul class="menu-links">
+                <li>
+                    <a href="/" class="menu-link">Browser extension</a>
+                </li>
+                <li>
+                    <a href="data" class="menu-link">Data + API</a>
+                </li>
+                <li>
+                    <a href="faq" class="menu-link">FAQ</a>
+                </li>
+                <li>
+                    <a href="sources" class="menu-link">Sources list</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="links" flex="25" flex-xs="100">
+            <ul class="menu-links">
+                <li>
+                    <a href="mailto:team@impactstory.org">
+                        <i class="fa fa-envelope-o"></i>
+                        Contact
+                    </a>
+                </li>
+                <li>
+                    <a href="http://twitter.com/unpaywall">
+                        <i class="fa fa-twitter"></i>
+                        Twitter
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/Impactstory/unpaywall">
+                        <i class="fa fa-github"></i>
+                        GitHub
+                    </a>
+                </li>
+            </ul>
         </div>
 
 
-
-        <div class="logo" flex="20" hide-xs>
-            <!--
-            <a href="/" ng-click="scrollToTop()">
-                <img src="static/img/icon-white.png" alt="">
-            </a>
-            -->
-        </div>
+        <div class="spacer" flex="25" hide-xs></div>
 
 
 
-        <div class="credit" flex="60" flex-xs="100">
+        <div class="credit" flex="25" flex-xs="100">
             <span class="built-by">
-                Built with <i class="fa fa-heart-o"></i> at
-                <a href="faq#who-is-behind-this">Impactstory</a>, with support from
+                Built with <i class="fa fa-heart-o"></i> at <a href="http://impactstory.org">Impactstory</a>
+
             </span>
             <span class="funders">
-                 the National Science Foundation and the Alfred P. Sloan Foundation.
+                 with support from the National Science Foundation and the Alfred P. Sloan Foundation.
             </span>
         </div>
     </div>
