--- a/static/src/header.tpl.html
+++ b/static/src/header.tpl.html
@@ -4,24 +4,21 @@
     </a>
     <div class="spacer"></div>
 
-    <!--
-    <a class="questions" href="" ng-click="scrollToAbout()">
-    </a>
-    -->
-
     <div class="links">
-        <a href="/" class="install" hide show--gt-xs>
-            <i class="fa fa-plus-circle"></i>
-            Install
-        </a>
-        <a href="/faq">
-            <i class="fa fa-question-circle"></i>
-            FAQ
-        </a>
-        <a href="/" class="home">
-            <i class="fa fa-home"></i>
-            home
-        </a>
+        <ul class="menu-links">
+            <li>
+                <a href="/" class="menu-link" hide show-gt-xs>Install</a>
+            </li>
+            <li>
+                <a href="data" class="menu-link">
+                    Data
+                    <span hide show-gt-xs> + API</span>
+                </a>
+            </li>
+            <li>
+                <a href="faq" class="menu-link">FAQ</a>
+            </li>
+        </ul>
 
     </div>
 
