--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -123,7 +123,7 @@
             <div class="testimonial">
                 <img src="static/img/tom.jpg" alt="">
                 <div class="copy">
-                    Yesterday I found Unpaywall, and my life changed.  I've already gotten 4 publications by clicking on the Mystical Green Padlock...Thank you, from the heart.
+                    Yesterday I found Unpaywall, and my life changed.  I've already gotten four publications by clicking on the Mystical Green Padlock...Thank you, from the heart.
                     <div class="attribution">
                         <div class="name">&mdash;Tom Mueller,</div>
                         <div class="job">Freelance Author</div>
