add access page.

--- a/static/src/access.tpl.html
+++ b/static/src/access.tpl.html
@@ -1,20 +1,14 @@
 <div class="ti-page-header" ng-include="'header.tpl.html'"></div>
 
-<div class="page data">
+<div class="page access">
     <div class="content">
         <h1>
-            About the data
+            Data access page
         </h1>
 
         <div>
             <p>
-                We're finishing up this page. It will be available
-                on Monday, Jan 22.
-            </p>
-            <p>
-                Here's the
-                <a href="api/v2">API Version 2 docs.</a>
-
+               This is the data access page.
             </p>
         </div>
 
