progress on /data page.

--- a/static/src/data.tpl.html
+++ b/static/src/data.tpl.html
@@ -18,6 +18,32 @@
             </p>
         </div>
 
+        <h2 id="use">Using Unpaywall data in your own projects</h2>
+        <p>There are lots of ways you can use the Unpaywall dataset in your own projects, depending on what you're trying to do:</p>
+        <ul>
+            <li>
+                <strong>Librarians:</strong>
+                can integrate Unpaywall into their
+                <a href="https://knowledge.exlibrisgroup.com/SFX/Knowledge_Articles/How_to_enable_oaDOI_service_on_SFX">SFX</a>
+                or
+                <a href="https://knowledge.exlibrisgroup.com/360_Services/360_Link/0Product_Documentation/Overview/360_Link_with_IEDL%3A_Open_Access_Lookup_Service_Integration">360 Link</a>
+                
+                link resolvers, so library users can read OA copies in cases where there's no subscription access. Over 1000 libraries worldwide are now using this now.
+            </li>
+
+            <li>
+                <strong>Institutional Repository managers</strong>
+                can use Unpaywall data to find OA resources that faculty have posted online, without depositing in their IR. These can be automatically ingested, significantly increasing IR coverage without needing to convince faculty to deposit. Repositories of all sizes have used Unpaywall data in this way.  SwePub (national repository of Sweden) added ***x million*** records.  **tiny canadian one**, a small Canadian university, added *** records, a 50% increase in fulltext coverage. IR managers can
+                <a href="dataset">download the complete dataset,</a>
+                <a href="check-dois">check lists of records by DOI,</a> or
+                take advantage of Unpaywall's integration into the
+                <a href="https://app.dimensions.ai/discover/publication?and_facet_open_access=True">Dimensions</a>
+
+            </li>
+
+        </ul>
+
+
     </div>
 
 
