--- a/static/src/footer.tpl.html
+++ b/static/src/footer.tpl.html
@@ -9,13 +9,13 @@
                     <a href="/" class="menu-link">Browser extension</a>
                 </li>
                 <li>
-                    <a href="data" class="menu-link">Data + API</a>
+                    <a href="data" class="menu-link">Our data</a>
                 </li>
                 <li>
                     <a href="faq" class="menu-link">FAQ</a>
                 </li>
                 <li>
-                    <a href="sources" class="menu-link">Sources list</a>
+                    <a href="sources" class="menu-link">Our data sources</a>
                 </li>
             </ul>
         </div>
