--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -49,6 +49,13 @@
                     The oaDOI service is currently used to enrich hundreds of academic libraries, search engines,
                     indexing services, and other tools; it's also used in many research and evaluation projects.
                 </dd>
+                
+                <dt id="legal"><i class="fa fa-chevron-right"></i>Is Unpaywall legal?</dt>
+                <dd>
+                    Yes! We harvest content from <strong>legal</strong> sources including repositories run by universities, governments, and scholarly societies, as well as open content hosted by publishers themselves. We do <em>not</em> harvest from sources of dubious legality like
+                    <a href="https://link.springer.com/article/10.1007/s11192-017-2291-4">ResearchGate</a>
+                    or <a href="https://answers.library.curtin.edu.au/faq/204046">Sci-Hub.</a> If you ever encounter content indexed by Unpaywall that is posted in violation of copyright, let us know and we'll remove it immediately.
+                </dd>
 
 
 
