--- a/static/src/api-v2.tpl.html
+++ b/static/src/api-v2.tpl.html
@@ -3,9 +3,6 @@
 <div class="page api-v2">
     <div class="content">
     <h1>API Version 2</h1>
-    <div class="version-good">
-        Version 2 will become the default version on October 1, 2017, and we recommend that new users build on this version. Use it now by prepending <code>/v2</code> to each endpoint.
-    </div>
 
     <ul class="toc">
         <li><a href="#limits">Limits and authentication</a></li>
@@ -31,9 +28,10 @@
 
     <h2 class="anchor"  id="limits">Limits and authentication</h2>
     <p>
-        The REST API gives anyone free, programmatic access to all of oaDOI's data.
-        There's no rate limit, but if you need more than 100k calls/day you
-        may want to download the datasets instead.
+        The REST API gives anyone free, programmatic access to all of Unpaywall's data.
+            There's no rate limit, but if you need more than 100k calls/day you
+            may want to
+            <a href="dataset">download the dataset</a> instead.
     </p>
     <p>
         Requests must include your email, so that we can
