--- a/static/src/data.tpl.html
+++ b/static/src/data.tpl.html
@@ -44,7 +44,7 @@
 
             <li>
                 <strong>OA researchers</strong> can use Unpaywall to answer research questions about the current and historical state of open access. There are several ways to access the data for research: you can use the
-                <a href="api/v2">open API,</a>
+                <a href="api">open API,</a>
                 <a href="https://cran.r-project.org/web/packages/roadoi/vignettes/intro.html">or the R API wrapper,</a>
                 <a href="check-dois">check a list of DOIs,</a>
                 or
@@ -58,7 +58,7 @@
             <li>
                 <strong>Enterprise users</strong> should check out our <a href="sla">SLA</a> in order to download and use the Unpaywall
                 <a href="dataset">dataset</a> for commercial projects. Once you've done that, we can help you set up a mirror database that allows you to keep an always-current version of Unpaywall's data hosted on your own servers. You can also use the
-                <a href="api/v2">API</a> for any use (commercial or otherwise) for free.
+                <a href="api">API</a> for any use (commercial or otherwise) for free.
             </li>
 
         </ul>
