remove references to oaDOI.

--- a/static/src/api-v2.tpl.html
+++ b/static/src/api-v2.tpl.html
@@ -75,7 +75,7 @@
                     Example
                 </td>
                 <td class="v">
-                    <a href="https://api.oadoi.org/v2?email=test@example.com">https://api.oadoi.org/v2?email=test@example.com</a>
+                    <a href="https://api.unpaywall.org/v2?email=test@example.com">https://api.oadoi.org/v2?email=test@example.com</a>
                 </td>
             </tr>
         </table>
@@ -122,7 +122,7 @@
                     Example
                 </td>
                 <td class="v">
-                    <a href="https://api.oadoi.org/v2/10.1038/nature12373?email=test@example.com">https://api.oadoi.org/v2/10.1038/nature12373?email=test@example.com</a>
+                    <a href="https://api.unpaywall.org/v2/10.1038/nature12373?email=test@example.com">https://api.oadoi.org/v2/10.1038/nature12373?email=test@example.com</a>
                 </td>
             </tr>
         </table>
@@ -398,7 +398,7 @@
                     <li>
                         <span class="value"><code>2</code></span>
                         <span class="notes">
-                            Second-generation hybrid detection. Uses additional sources, checks all publishers for hybrid. Gets about 10x as much hybrid. <code>data_standard==2</code> is the version used in the paper we wrote about oaDOI.
+                            Second-generation hybrid detection. Uses additional sources, checks all publishers for hybrid. Gets about 10x as much hybrid. <code>data_standard==2</code> is the version used in the paper we wrote about the dataset.
                         </span>
                     </li>
                 </ul>
