--- a/static/src/sla.tpl.html
+++ b/static/src/sla.tpl.html
@@ -27,7 +27,7 @@
             Get enterprise-level service and support established and guaranteed in writing.
         </li>
         <li>
-            Help support oaDOI and keep it sustainable over the long term.
+            Help support Unpaywall and keep it sustainable over the long term.
         </li>
     </ul>
 
