--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -6,17 +6,6 @@
             <h1>Frequently asked questions</h1>
             <dl>
 
-                <!--
-                <dt id="who-is-behind-this"><i class="fa fa-chevron-right"></i>Who's behind Unpaywall?</dt>
-                <dd>
-                    We're <a href="http://impactstory.org/about">Impactstory,</a>
-                    a nonprofit working to make science more open and reusable online.
-                    We're supported by grants from <span class="funders">
-                    the National Science Foundation and the Alfred P. Sloan Foundation
-            </span>
-                </dd>
-                -->
-
 
                 <dt id="how-often-finds-fulltext"><i class="fa fa-chevron-right"></i>How often does Unpaywall find full text?</dt>
                 <dd>
@@ -35,12 +24,19 @@
 
                 <dt id="how-do-you-find-articles"><i class="fa fa-chevron-right"></i>How do you find all these fulltext articles?</dt>
                 <dd>
-                    We harvest content directly from thousands of open-access repositories worldwide.
+                    We harvest content directly from
+                    <a href="sources">
+                        over 50,000 journals open-access repositories
+                    </a>
+                    from all over the world.
+
                     We also use great open data from
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/">PubMed Central</a>,
                     <a href="https://doaj.org/">the DOAJ,</a>
                     <a href="https://www.crossref.org/">Crossref</a> (particulary their license info), and
                     <a href="https://www.datacite.org/">DataCite.</a>
+                    You can learn more about our data on
+                    <a href="data">this page.</a>
                 </dd>
 
 
@@ -49,6 +45,12 @@
                     Yes! We harvest content from <strong>legal</strong> sources including repositories run by universities, governments, and scholarly societies, as well as open content hosted by publishers themselves. We do <em>not</em> harvest from sources of dubious legality like
                     <a href="https://link.springer.com/article/10.1007/s11192-017-2291-4">ResearchGate</a>
                     or <a href="https://answers.library.curtin.edu.au/faq/204046">Sci-Hub.</a> If you ever encounter content indexed by Unpaywall that is posted in violation of copyright, let us know and we'll remove it immediately.
+                </dd>
+
+                <dt id="oadoi"><i class="fa fa-chevron-right"></i>How is this related to the oaDOI service?</dt>
+                <dd>
+                    We used to call the browser extension "Unpaywall," and the data source behind it "oaDOI." That got confusing, so now the whole project is just called Unpaywall, including the database, the API, the extension, and everything else. The services previously offered under the oaDOI name still work (and are still handling millions of daily users), but the name itself has been retired.
+
                 </dd>
 
 
