--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -53,6 +53,11 @@
 
                 </dd>
 
+                <dt id="get-indexed">How can I make sure content from my open repository appears in Unpaywall?</dt>
+                <dd>
+                    Since we index over 50,000 sources of OA content, there's a pretty good chance your repository is already in our database. You can make sure by
+                    <a href="sources">searching our sources list.</a>
+                </dd>
 
 
                 <dt id="privacy-policy"><i class="fa fa-chevron-right"></i>What's your privacy policy?</dt>
@@ -69,6 +74,11 @@
                     any kind of browser fingerprinting technology to identify your computer.
                 </dd>
 
+
+                <dt id="different-results-from-unpaywall">Why does the Unpaywall extension sometimes give different results from the API or dataset?</dt>
+                <dd>
+                    The extension occasionally reports "open" when the API doesn't because the extension, in addition to checking our API, also checks the source code of publisher pages themselves as you visit them.
+                </dd>
 
 
                 <dt id="identify-green-or-gold"><i class="fa fa-chevron-right"></i>Can Unpaywall tell me whether an article is "Green" or "Gold" OA?</dt>
