--- a/static/src/check-dois.tpl.html
+++ b/static/src/check-dois.tpl.html
@@ -1,16 +1,61 @@
 <div class="ti-page-header" ng-include="'header.tpl.html'"></div>
 
-<div class="page check-dataset">
+<div class="page check-dois">
     <div class="content">
         <h1>
             Check DOIs
         </h1>
 
-        <p>
-            This service is coming soon. When it's up, you'll be able to
-            upload a list of DOIs, get OA status for each of them emailed to you
-            as a dataset.
-        </p>
+
+        <div class="about">
+            <p>
+                Upload a list of DOIs, and we'll access the Unpaywall database to find OA information for each one. You'll get results as a spreadsheet emailed to you in a few minutes. You can check up to 10,000 DOIs at a time this way.
+            </p>
+        </div>
+
+        <div class="input" ng-submit="submit()">
+
+            <form>
+
+                <div class="form-row">
+                    <label for="dois-textarea">1. Paste DOIs here, one per line</label>
+                    <textarea
+                            ng-model="input.dois"
+                            name="dois"
+                            id="dois-textarea"
+                            rows="10"></textarea>
+                </div>
+
+                <div class="form-row email">
+                    <md-input-container class="md-block email">
+                        <label>2. Enter your email</label>
+                        <input ng-model="input.email">
+                    </md-input-container>
+                </div>
+
+                <div class="form-row">
+                    <md-button type="submit"
+                               ng-disabled="!(input.dois && input.email)"
+                               id="submit"
+                               ng-click="submit()"
+                               class="md-primary md-raised">
+                        3. Submit your
+                            <span class="num" ng-show="{{ getDois() }}">
+                                {{ getDois().length }}
+                            </span>
+                        DOIs
+                    </md-button>
+                </div>
+
+
+
+            </form>
+
+
+
+
+        </div>
+
 
 
     </div>
@@ -20,5 +65,11 @@
 
 
 
+
 </div>
 <div class="footer-container" ng-include="'footer.tpl.html'"></div>
+
+
+
+
+
