--- a/static/src/api-v2.tpl.html
+++ b/static/src/api-v2.tpl.html
@@ -42,7 +42,7 @@
 
     <p>
         If you're using the API, we recommend you subscribe to the
-        <a href="https://groups.google.com/forum/#!forum/oadoi-users">mailing list</a> in order
+        <a href="https://groups.google.com/forum/#!forum/unpaywall">mailing list</a> in order
         to stay up-to-date when there are changes or new features.
     </p>
 
@@ -75,15 +75,12 @@
                     Example
                 </td>
                 <td class="v">
-                    <a href="https://api.unpaywall.org/v2?email=test@example.com">https://api.oadoi.org/v2?email=test@example.com</a>
+                    <a href="https://api.unpaywall.org/v2?email=test@example.com">https://api.unpaywall.org/v2?email=test@example.com</a>
                 </td>
             </tr>
         </table>
 
     </div>
-
-
-
 
 
 
@@ -122,7 +119,7 @@
                     Example
                 </td>
                 <td class="v">
-                    <a href="https://api.unpaywall.org/v2/10.1038/nature12373?email=test@example.com">https://api.oadoi.org/v2/10.1038/nature12373?email=test@example.com</a>
+                    <a href="https://api.unpaywall.org/v2/10.1038/nature12373?email=test@example.com">https://api.unpaywall.org/v2/10.1038/nature12373?email=test@example.com</a>
                 </td>
             </tr>
         </table>
