link to non-edit version of google forms.

--- a/static/src/dataset.tpl.html
+++ b/static/src/dataset.tpl.html
@@ -12,7 +12,7 @@
         </p>
         <p>
             To download the dataset, please fill out
-            <a href="https://docs.google.com/forms/d/12UGb9D10ct1xmgOwKsHywON6nWj-9uWSURO7-Su2MJo">this form</a> and we'll send you a URL where you can get the data. You can read the,
+            <a href="https://goo.gl/forms/AZqaqKEzMcjLGdTT2">this form</a> and we'll send you a URL where you can get the data. You can read the,
             <a href="https://docs.google.com/document/d/1Whfe26oyjTedeW1GGWkq3NADgDbL2R2eXqrJCWS8vcc/edit">dataset release notes here.</a> You can
             <a href="data">learn more about Unpaywall's data here.</a>
         </p>
