--- a/static/src/sources.tpl.html
+++ b/static/src/sources.tpl.html
@@ -16,7 +16,7 @@
 
             <p>
                 If you'd like to add your repository or journal to our list of sources, that's great! You can submit your repository for indexing via
-                <a href="https://docs.google.com/forms/d/15o4RpUUfCUyauTt2DniLG23CWfDZ243Q1H7u6NX5zL8">
+                <a href="https://goo.gl/forms/AZqaqKEzMcjLGdTT2">
                     this form,
                 </a> and submit your journal <a href="mailto:team@impactstory.org">via email.</a>
             </p>
