Fix Carleton typo

--- a/static/src/data.tpl.html
+++ b/static/src/data.tpl.html
@@ -32,7 +32,7 @@
             <li>
                 <strong>Institutional Repository managers</strong>
                 can use Unpaywall data to find OA resources that faculty have posted online, without depositing in their IR. These can be automatically ingested, significantly increasing IR coverage without needing to convince faculty to deposit. Repositories of all sizes have used Unpaywall data in this way.  SwePub (national repository of Sweden) added 75,000 new OA records, increasing number of OA records by over 30%, while the smaller
-                <a href="https://ir.library.carleton.ca/">the Carlton University IR</a> added 1000 OA records, doubling their fulltext coverage. There are a few good ways to access our data for this use case:
+                <a href="https://ir.library.carleton.ca/"> Carleton University IR</a> added 1000 OA records, doubling their fulltext coverage. There are a few good ways to access our data for this use case:
                 <a href="dataset">downloading the complete dataset,</a>
                 <a href="check-dois">check lists of records by DOI,</a> or
                 taking advantage of Unpaywall's integration into the
