Use HTTPS where possible in footer

--- a/static/src/footer.tpl.html
+++ b/static/src/footer.tpl.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="http://twitter.com/unpaywall">
+                    <a href="https://twitter.com/unpaywall">
                         <i class="fa fa-twitter"></i>
                         Twitter
                     </a>
@@ -50,7 +50,7 @@
 
         <div class="credit" flex="25" flex-xs="100">
             <span class="built-by">
-                Built with <i class="fa fa-heart-o"></i> at <a href="http://impactstory.org">Impactstory</a>
+                Built with <i class="fa fa-heart-o"></i> at <a href="https://impactstory.org">Impactstory</a>
 
             </span>
             <span class="funders">
