Use HTTPS where possible in sources

--- a/static/src/sources.tpl.html
+++ b/static/src/sources.tpl.html
@@ -11,7 +11,7 @@
         <div class="header">
             <p>
                 Unpaywall finds OA content in many ways, including using data from open indexes like Crossref and DOAJ where it exists. However, the majority of our OA content comes from independently monitoring over 50,000 unique online content hosting locations, including Gold OA journals, Hybrid journals, institutional repositories, and disciplinary repositories. You can search through our sources below, or
-                <a href="http://api.oadoi.org/data/sources.csv">download the complete sources list.</a>
+                <a href="https://api.oadoi.org/data/sources.csv">download the complete sources list.</a>
             </p>
 
             <p>
