--- a/extension/options.html
+++ b/extension/options.html
@@ -43,7 +43,7 @@
         Color-code the unlock tab to show whether fulltext is
         <a class="green" href="https://en.wikipedia.org/wiki/Open_access#Self-archiving:_green_open_access">Green,</a>
         <a href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access" class="gold">Gold,</a>
-        or <a class="bronze" href="10.7287/peerj.preprints.3119v1">Bronze</a> open access, and
+        or <a class="bronze" href="https://peerj.com/articles/4375/">Bronze</a> open access, and
         see expanded debug info. <a href="https://peerj.com/preprints/3119v1/">(learn more about OA colors)</a>
     </p>
 </div>
