Link to peer-reviewed paper instead of preprint

--- a/extension/options.html
+++ b/extension/options.html
@@ -44,7 +44,7 @@
         <a class="green" href="https://en.wikipedia.org/wiki/Open_access#Self-archiving:_green_open_access">Green,</a>
         <a href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access" class="gold">Gold,</a>
         or <a class="bronze" href="https://peerj.com/articles/4375/">Bronze</a> open access, and
-        see expanded debug info. <a href="https://peerj.com/preprints/3119v1/">(learn more about OA colors)</a>
+        see expanded debug info. <a href="https://peerj.com/articles/4375/">(learn more about OA colors)</a>
     </p>
 </div>
 
