replace preprint with peer reviewed article URL

--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -12,7 +12,7 @@
                     Overall, Unpaywall users find fulltext for 47% of articles. You may get different results,
                     depending on the age and topic of the articles you're reading. There's more information
                     on how we found these numbers in
-                    <a href="https://peerj.com/preprints/3119v1/">this paper.</a>
+                    <a href="https://peerj.com/articles/4375/">this paper.</a>
 
                     This success rate will improve as we tweak our algorithm and as
                     mandatory open access requirements take effect in the
@@ -96,7 +96,7 @@
                         <li>
                             <div class="text">
                                 <span class="color bronze">Bronze tab</span> for <a
-                                    href="https://peerj.com/preprints/3119v1/">Bronze OA</a> articles free to read on the current page, but
+                                    href="https://peerj.com/articles/4375/">Bronze OA</a> articles free to read on the current page, but
                                 published in a toll-access journal.
                                 <a class="eg" href="http://www.pnas.org/content/105/31/11014">(example)</a>
 
