--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -36,7 +36,7 @@
             PS for the Open Access nerds: the Unpaywall tab
             can change colors to indicate Green or Gold OA, too. Enable it in settings.
             You might also enjoy
-            <a href="https://peerj.com/preprints/3119v1/">our recent paper</a>
+            <a href="https://peerj.com/articles/4375/">our recent paper</a>
             analyzing trends in OA and the coverage
             of Unpaywall.
         </p>
