update/make consistent wikipedia links

--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -80,7 +80,7 @@
                         <li>
                             <div class="text">
                                 <span class="color gold">Gold tab</span> for <a
-                                    href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access">Gold OA</a>
+                                    href="https://en.wikipedia.org/wiki/Open_access#Open_access_publishing">Gold OA</a>
                                 articles available from a fully OA journal.
                                 <a class="eg" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0000308">(example)</a>
                             </div>
