make links to unpaywall.org https

--- a/extension/options.html
+++ b/extension/options.html
@@ -54,7 +54,7 @@
 
 <hr>
 <p>
-    For FAQ and contact info, check out <a href="http://unpaywall.org">unpaywall.org.</a>
+    For FAQ and contact info, check out <a href="https://unpaywall.org">unpaywall.org.</a>
 </p>
 
 <script src="options.js"></script>
