--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -61,6 +61,8 @@
             </div>
 
         </div>
+
+
         <div class="more">
             <div class="content">
                 <i class="fa fa-chevron-down"></i>
@@ -131,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="testimonial">
+            <div class="testimonial md-layout md-gutter md-alignment-center"">
                 <img src="static/img/jon.jpg" alt="">
                 <div class="copy">
                     Way, way, WAY easier than having to be at a place with institutional access, using a VPN, emailing authors, using inter-library loan...
