make display: block explicit on unlock icon

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -31,6 +31,9 @@
         .button .fa-lock {
             display: none;
         }
+        .button .fa-unlock-alt {
+            display: block;
+        }
 
         div.icon {
             font-size: 22px;
